5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1831_1642.log
== TEST (2019-06-13 16:06:36) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

x = 0

while x in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet[i] = vet[i] + 1
		print(vet)
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:06:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0

while i in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet[i] = vet[i] + 1
		print(vet)
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:30) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0

while i in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet[i] = vet[i] + 1
		print(sum(vet))
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:14) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0

while i in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet[i] = vet[i] + 1
		print(len(vet))
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:29) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0

while i in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet[i] = vet[i] + 1
		print(len(vet[i]))
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:40) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0

while i in range(len(vet)):
	
	if vet[i] % 5 == 0:
		vet1[i] = vet[i] + 1
		print(len(vet1))
#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:58) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	if vet[1] % 5 == 0:
		vet[i] = vet[i] + 1
		
	print(vet1)
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:15) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	if vet[1] % 5 == 0:
		vet[i] = vet[i] + 1
		
	print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:13) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(lenvont)
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:38) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(lenvont)
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:53) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(len(vcont))
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:27:07) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(len(vcont))
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- EXECUTION TIME:
0.846894
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
[1 0 0 0 0 0 0 0 0 0 0 0 0]
13
[2 0 0 0 0 0 0 0 0 0 0 0 0]
13
[2 0 0 0 0 0 0 0 0 0 0 0 0]
13
[2 0 0 0 0 0 0 0 0 0 0 0 0]
13
[2 0 0 0 0 0 0 0 0 0 0 0 0]
13
[3 0 0 0 0 0 0 0 0 0 0 0 0]
13
[4 0 0 0 0 0 0 0 0 0 0 0 0]
13
[4 0 0 0 0 0 0 0 0 0 0 0 0]
13
[4 0 0 0 0 0 0 0 0 0 0 0 0]
13
[4 0 0 0 0 0 0 0 0 0 0 0 0]
13
[5 0 0 0 0 0 0 0 0 0 0 0 0]
13
[6 0 0 0 0 0 0 0 0 0 0 0 0]
13
[6 0 0 0 0 0 0 0 0 0 0 0 0]
13
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
[1 0 0 0 0 0 0 0 0]
9
[2 0 0 0 0 0 0 0 0]
9
[2 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[4 0 0 0 0 0 0 0 0]
9
[5 0 0 0 0 0 0 0 0]
9
[5 0 0 0 0 0 0 0 0]
9
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
[1 0 0 0 0 0 0 0 0]
9
[2 0 0 0 0 0 0 0 0]
9
[2 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[3 0 0 0 0 0 0 0 0]
9
[4 0 0 0 0 0 0 0 0]
9
[4 0 0 0 0 0 0 0 0]
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:18) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(len(vcont))
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:31) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont[0] = vcont[0] + 1
	
	print(vcont)
	print(len(vcont))
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:28) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vcont = vcont - 1
	
	print(vcont)
	
		

		
#print(vet[i])
	
	

#Quantas turmas podem dividir exatamente por 5

#Quantas o indice é dividindo por 5 é igual a 0
#if 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:56) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:09) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:48) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
		ptin(sum(vet[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:02) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
		print(sum(vet[i])
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:12) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
		print(sum(vet[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:38) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
		print(len(vet[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:48) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		print(vet[i])
		print(size(vet[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		#print(vet[i])
		print(size(vet[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:30) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vet[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:36) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vcont[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:43) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vcont[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i:]
		#print(vet[i])
		print(vcont[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:11) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vcont[i::])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:22) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vcont[i:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:38) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(vcont[i:j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:16) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(len(vcont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:31) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(len(vcont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:40:35) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(len(vcont))
-- EXECUTION TIME:
0.840008
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
13
13
13
13
13
13
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
9
9
9
9
9
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
9
9
9
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:52) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	if vet[i] % 5 == 0:
		vet1 = vet[i]
		print(vet1)
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(len(vcont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:01) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	#Quantidade de Turmas com 5 exatos
	if vet[i] % 5 == 0:
		vet1 = vet[i]
	print(vet1)
	
	#Posicao Vetor
	if vet[i] % 5 == 0:
		vcont[i] = vcont[i]
		#print(vet[i])
		print(len(vcont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:52) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:46:35) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(len(vet[i]))
	
	
-- EXECUTION TIME:
1.01086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1642/main.py", line 12, in <module>
    print(len(vet[i]))
TypeError: object of type 'numpy.int64' has no len()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:36) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(len(vet[i]))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:54) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(size(vet[i]))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:12) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(size(vet[i]))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:47:34) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(size(vet[i]))
	
	
-- EXECUTION TIME:
1.07671
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
10
1
20
1
15
1
20
1
25
1
10
1
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
10
1
20
1
15
1
25
1
10
1
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
10
1
20
1
15
1
10
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:29) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet[i]))
		print(vet[i])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:48:43) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet[i]))
		print(vet[i])
		
	
	
-- EXECUTION TIME:
0.961581
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
1
10
1
20
1
15
1
20
1
25
1
10
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
1
10
1
20
1
15
1
25
1
10
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
1
10
1
20
1
15
1
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:07) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(sum(vet[i]))
		print(vet[i])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:08) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(sum(vet[i]))
		print(vet[i])
		
	
	
-- EXECUTION TIME:
1.11445
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
10
10
20
20
15
15
20
20
25
25
10
10
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
10
10
20
20
15
15
25
25
10
10
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
Alunos de cada turma: 10
10
20
20
15
15
10
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:33) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[i])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:41) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[i])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:50) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[i])
		
	
	
-- EXECUTION TIME:
0.819865
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
13
10
13
20
13
15
13
20
13
25
13
10
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
9
10
9
20
9
15
9
25
9
10
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
9
10
9
20
9
15
9
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:12) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:50:27) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[:])
		
	
	
-- EXECUTION TIME:
0.990618
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
13
[10 20 31  1 13 15 20 33 36 63 25 10  2]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
9
[10 20 31 15 36 63 25 10  2]
9
[10 20 31 15 36 63 25 10  2]
9
[10 20 31 15 36 63 25 10  2]
9
[10 20 31 15 36 63 25 10  2]
9
[10 20 31 15 36 63 25 10  2]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
9
[10 20 31 15 36 63 26 10  2]
9
[10 20 31 15 36 63 26 10  2]
9
[10 20 31 15 36 63 26 10  2]
9
[10 20 31 15 36 63 26 10  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:33) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet))
		print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:05) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:30) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[:i])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:51:40) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[:i])
		
	
	
-- EXECUTION TIME:
0.791353
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
10
[]
20
[10]
15
[10 20 31  1 13]
20
[10 20 31  1 13 15]
25
[10 20 31  1 13 15 20 33 36 63]
10
[10 20 31  1 13 15 20 33 36 63 25]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
10
[]
20
[10]
15
[10 20 31]
25
[10 20 31 15 36 63]
10
[10 20 31 15 36 63 25]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
10
[]
20
[10]
15
[10 20 31]
10
[10 20 31 15 36 63 26]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:44) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[i:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:54) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[i:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:51:54) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(vet[i])
		print(vet[i:])
		
	
	
-- EXECUTION TIME:
0.741162
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
10
[10 20 31  1 13 15 20 33 36 63 25 10  2]
20
[20 31  1 13 15 20 33 36 63 25 10  2]
15
[15 20 33 36 63 25 10  2]
20
[20 33 36 63 25 10  2]
25
[25 10  2]
10
[10  2]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
10
[10 20 31 15 36 63 25 10  2]
20
[20 31 15 36 63 25 10  2]
15
[15 36 63 25 10  2]
25
[25 10  2]
10
[10  2]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
10
[10 20 31 15 36 63 26 10  2]
20
[20 31 15 36 63 26 10  2]
15
[15 36 63 26 10  2]
10
[10  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:03) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet[i]))
		print(vet[i:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:10) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		print(size(vet[i]))
		print(vet[i:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:14) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2)
		print(vet[:])
		
	
	
-- ERROR:
File "XXXX", line 13
    print(vet[:])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:26) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2)
		#print(vet[:])
		
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:53:26) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2)
		#print(vet[:])
		
	
	
-- EXECUTION TIME:
0.647298
-- ERROR:
  File "/home/codebench/codes/1831/1642/main.py", line 17
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:34) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		#print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:53:36) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		#print(vet[:])
		
	
	
-- EXECUTION TIME:
0.834675
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
1
1
1
1
1
1
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
Alunos de cada turma: 1
1
1
1
1
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
Alunos de cada turma: 1
1
1
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:53:58) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		print(vet[:])
		
	
	
-- EXECUTION TIME:
0.843659
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
Alunos de cada turma: 1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:11) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		print(vet[:])
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:13) 
-- CODE:
from numpy import *

vet = array(eval(input("Alunos de cada turma: ")))

#i = 0
vcont = zeros(size(vet),dtype=int)

for i in range(0,size(vet)):
	
	if vet[i] % 5 == 0:
		vetor2 = vet[1] + 1
		print(size(vetor2))
		print(vet[:])
		
	
	
-- EXECUTION TIME:
0.998246
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
1
[10 20 31  1 13 15 20 33 36 63 25 10  2]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
1
[10 20 31 15 36 63 25 10  2]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
Alunos de cada turma: 1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
1
[10 20 31 15 36 63 26 10  2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
